--- a/index.html
+++ b/index.html
@@ -114,9 +114,8 @@
                 </div>
                 <!-- About Section Content-->
                 <div class="row">
-                    <div class="col-lg-4 ml-auto"><p class="lead">Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional SASS stylesheets for easy customization.</p></div>
-                    <div class="col-lg-4 mr-auto"><p class="lead">You can create your own custom avatar for the masthead, change the icon in the dividers, and add your email address to the contact form to make it fully functional!</p></div>
-                </div>
+                    <div class="col-lg-4 ml-auto"><p class="lead">  Hi, this is Shrishti Agrawal I am a CA Aspirant. 
+                    <div class="col-lg-4 mr-auto"><p class="lead"> In my free time i love to dancing  also my hobbies are drawing and sometimes playing badmintion 
             </div>
         </section>
         <!-- Contact Section-->
@@ -194,8 +193,10 @@
                     <div class="col-lg-4">
                         <h4 class="text-uppercase mb-4">About Enchanted Moves</h4>
                         <p class="lead mb-0">
-                            Freelance is a free to use, MIT licensed Bootstrap theme created by
-                            <a href="http://startbootstrap.com">Start Bootstrap</a>
+                            Created Enchanted moves just for fun 
+                            Started uploding videos on Youtube in  mid march 2021
+                            
+                            
                             .
                         </p>
                     </div>
