--- a/index.html
+++ b/index.html
@@ -114,8 +114,8 @@
                 </div>
                 <!-- About Section Content-->
                 <div class="row">
-                    <div class="col-lg-4 ml-auto"><p class="lead">  Hi, this is Shrishti Agrawal I am a CA Aspirant. 
-                    <div class="col-lg-4 mr-auto"><p class="lead"> In my free time i love to dancing  also my hobbies are drawing and sometimes playing badmintion 
+                    <div class="col-lg-4 ml-auto"><p class="lead">  Hi, this is Shrishti Agrawal I am a CA Aspirant. </p></div>
+                    <div class="col-lg-4 mr-auto"><p class="lead"> In my free time i love to dancing  also my hobbies are drawing and sometimes playing badmintion.</p></div> 
             </div>
         </section>
         <!-- Contact Section-->
