--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                 <div class="row">
                     <div class="col-lg-8 mx-auto">
                         <!-- To configure the contact form email address, go to mail/contact_me.php and update the email address in the PHP file on line 19.-->
-                        <form id="contactForm" name="sentMessage" action="/" method="post" >
+                        <form id="contactForm" name="sentMessage" action="mailto:enchantmoves123@gmail.com" method="post" enctype="text/plain" >
                             <div class="control-group">
                                 <div class="form-group floating-label-form-group controls mb-0 pb-2">
                                     <label>Name</label>
